# pyagent

./: .gitignore  404.html  AGENTS.md  CODE_OF_CONDUCT.md  PYAI_README.md  PyPI-Recovery-Codes-pavleen.bali21-2026-02-17T21_14_09.122227.txt  README.md  SECURITY.md  index.html  llms.txt  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  pipeline.yml  tests.yml
API_REFERENCE/: index.html
ARCHITECTURE/: index.html
AZURE_SETUP/: index.html
CHANGELOG/: index.html
CONTRIBUTING/: index.html
DISTRIBUTION/: index.html
QUICKSTART/: index.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  AZURE_SETUP.md  CHANGELOG.md  CONTRIBUTING.md  DISTRIBUTION.md  QUICKSTART.md  index.md
docs/wiki/: A2A-Module.md  A2A-Protocol.md  A2AClient.md  A2AServer.md  API-Reference.md  Agent.md  Architecture.md  AudioContent.md  Azure-AD-Auth.md  Built-in-Skills.md  Changelog.md  ChromaDB.md  Configuration.md  Contributing.md  Creating-Tools.md  Design-Philosophy.md  EvalSet.md  Evaluation-Module.md  Evaluation.md  Evaluator.md  Guardrails.md  Handoffs.md  Home.md  ImageContent.md  Installation.md  Kernel-Registry.md  LLM-Providers.md  Memory.md  Multimodal-Module.md  Multimodal.md  OpenAPI-Module.md  OpenAPI-Tools.md  OpenAPIClient.md  OpenAPIParser.md  Orchestration-Patterns.md  Pinecone.md  PluginBase.md  PluginRegistry.md  Plugins-Module.md  Qdrant.md  (+29 more)
examples/: README.md  basic_agent.py  comprehensive_examples.py  config_helper.py  custom_skills.py  multi_agent_workflow.py  quick_start.py  smart_research_assistant.py  test_new_features.py  weather_app.py
pyagent/: __init__.py
pyagent/easy/: guardrails.py  handoff.py
pyagent/integrations/: __init__.py
scripts/: deploy-wiki.ps1
search/: search_index.json
site/: index.html  sitemap.xml
site/API_REFERENCE/: index.html
site/ARCHITECTURE/: index.html
site/AZURE_SETUP/: index.html
site/CHANGELOG/: index.html
site/CONTRIBUTING/: index.html
site/DISTRIBUTION/: index.html
site/QUICKSTART/: index.html
site/wiki/A2A-Module/: index.html
site/wiki/A2A-Protocol/: index.html
site/wiki/A2AClient/: index.html
site/wiki/A2AServer/: index.html
site/wiki/API-Reference/: index.html
site/wiki/Agent/: index.html
site/wiki/Architecture/: index.html
site/wiki/AudioContent/: index.html
site/wiki/Azure-AD-Auth/: index.html
site/wiki/Built-in-Skills/: index.html
site/wiki/Changelog/: index.html
site/wiki/ChromaDB/: index.html
site/wiki/Configuration/: index.html
site/wiki/Creating-Tools/: index.html
site/wiki/Design-Philosophy/: index.html
site/wiki/EvalSet/: index.html
site/wiki/Evaluation/: index.html
site/wiki/Evaluation-Module/: index.html
site/wiki/Evaluator/: index.html
site/wiki/Guardrails/: index.html
site/wiki/Handoffs/: index.html
site/wiki/Home/: index.html
site/wiki/ImageContent/: index.html
site/wiki/Installation/: index.html
site/wiki/Kernel-Registry/: index.html
site/wiki/LLM-Providers/: index.html
site/wiki/Memory/: index.html
site/wiki/Multimodal/: index.html
site/wiki/Multimodal-Module/: index.html
site/wiki/OpenAPI-Module/: index.html
site/wiki/OpenAPI-Tools/: index.html
site/wiki/OpenAPIClient/: index.html
site/wiki/OpenAPIParser/: index.html
site/wiki/Orchestration-Patterns/: index.html
site/wiki/Pinecone/: index.html
src/pyagent/: README.md  __init__.py  __init__.pyi  py.typed
src/pyai/: __init__.py  __init__.pyi
tests/: __init__.py  conftest.py  test_azure_integration.py  test_config.py  test_core.py  test_easy_features.py  test_evaluation.py  test_integration_smoke.py  test_integrations.py  test_kernel.py  test_live_integration.py  test_models.py  test_openapi.py  test_orchestrator.py  test_phase2_phase3.py  test_plugins.py  test_runner.py  test_sessions.py  test_smoke.py  test_tokens.py  test_usecases.py  test_validation.py
wiki/A2A-Module/: index.html
wiki/A2A-Protocol/: index.html
wiki/A2AClient/: index.html
wiki/A2AServer/: index.html
wiki/API-Reference/: index.html
wiki/Agent/: index.html
wiki/Architecture/: index.html
wiki/AudioContent/: index.html
wiki/Azure-AD-Auth/: index.html
wiki/Built-in-Skills/: index.html
wiki/Changelog/: index.html
wiki/ChromaDB/: index.html
wiki/Configuration/: index.html
wiki/Contributing/: index.html
wiki/Creating-Tools/: index.html
wiki/Design-Philosophy/: index.html
wiki/EvalSet/: index.html
wiki/Evaluation/: index.html
wiki/Evaluation-Module/: index.html
wiki/Evaluator/: index.html
wiki/Guardrails/: index.html
wiki/Handoffs/: index.html
wiki/ImageContent/: index.html
wiki/Installation/: index.html
wiki/Kernel-Registry/: index.html
wiki/LLM-Providers/: index.html
wiki/Memory/: index.html
wiki/Multimodal/: index.html
wiki/Multimodal-Module/: index.html
wiki/OpenAPI-Module/: index.html
wiki/OpenAPI-Tools/: index.html
wiki/OpenAPIClient/: index.html
wiki/OpenAPIParser/: index.html
wiki/Orchestration-Patterns/: index.html
wiki/Pinecone/: index.html
wiki/PluginBase/: index.html
wiki/PluginRegistry/: index.html
wiki/Plugins-Module/: index.html
wiki/Qdrant/: index.html
wiki/Quick-Start/: index.html
wiki/Runner/: index.html
wiki/Sessions/: index.html
wiki/Software-Factories/: index.html
wiki/Synthesis/: index.html
wiki/TestCase/: index.html
wiki/Three-Dimensions/: index.html
wiki/Tracing/: index.html
wiki/Transcription/: index.html
wiki/Vector-Database/: index.html
wiki/VectorDB-Module/: index.html
wiki/VideoContent/: index.html
wiki/Voice/: index.html
wiki/Voice-Module/: index.html
wiki/VoiceSession/: index.html
wiki/Weaviate/: index.html
wiki/Workflows/: index.html
wiki/_Sidebar/: index.html
wiki/analyze/: index.html
wiki/ask/: index.html
wiki/chat/: index.html
wiki/code/: index.html
wiki/extract/: index.html
wiki/fetch/: index.html
wiki/generate/: index.html
wiki/rag/: index.html
wiki/research/: index.html
wiki/summarize/: index.html
wiki/translate/: index.html
(+292 files in other folders)
